<resources>
    <string name="app_name">Github User App</string>
    <string name="image">Image</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="not_found">Not Found</string>
    <string name="profile">profile</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="repo">repo</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="search">search</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
</resources>